--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
+  "scripts": {
+    "lint": "eslint . --silent",
+    "start": "nodemon ./src/server.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.12",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "eslint": "^7.31.0"
-  },
-  "scripts": {
-    "lint": "eslint . --silent",
-    "start": "node ./src/server.js"
   }
 }
