--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/socket.io": "^3.0.2",
     "eslint": "^7.31.0"
   }
 }
