--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
     "lint": "eslint . --silent",
-    "start": "nodemon ./src/server.js"
+    "start": "nodemon ./server.js"
   },
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3"
