--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,7 @@
     "object-curly-spacing": ["error", "always"],
     "one-var": "off",
     "padded-blocks": "off",
-    "quotes": ["error", "single"],
+    "quotes": ["error", {"avoidEscape":true, "allowTemplateLiterals":true}],
     "quote-props": "off",
     "semi": ["error", "never"],
     "sort-keys": "off",
